--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">CompagnySimulator</string>
+
+    <!-- DESCRIPTION IMAGE -->
+    <string name="description_image_employes">Image employes</string>
+    <string name="detail_employes">DETAILS DES EMPLOYES</string>
 </resources>
