Mise en place des fonctions permettant d'afficher les differents éléments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,7 @@
     <string name="miseAJourSysteme">MAJ SYSTEMES</string>
     <string name="formationEmployes">FORMER EMPLOYES</string>
     <string name="sousTraiter">SOUS TRAITER</string>
+    <string name="informationSousTraiter">
+        Un "penetration tester" evalue la securite d\'un systeme en cherchant des failles.\nPlus le nombre de failles trouve est eleve, plus la securite informatique sera ameliore
+    </string>
 </resources>
