Mose en place de l'écran de réputation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,14 @@
     <string name="informationSousTraiter">
         Un "penetration tester" evalue la securite d\'un systeme en cherchant des failles.\nPlus le nombre de failles trouve est eleve, plus la securite informatique sera ameliore
     </string>
+    <string name="informationAntivirus">
+        Etes-vous sur de vouloir investir dans un nouvel antivirus ?
+    </string>
+    <string name="prixAntivirus">150</string>
+
+    <!-- REPUTATION -->
+    <string name="reputation">REPUTATION</string>
+    <string name="niveau_reputation">63%</string>
+    <string name="parite">PARITE</string>
+    <string name="campagneCom">LANCER CAMPAGNE COM</string>
 </resources>
