--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,5 +94,9 @@
     <string name="ressources">RESSOURCES</string>
     <string name="niveau_ressources">2791500</string>
     <string name="premiereRessources">50</string>
+    <string name="deuxiemeRessources">100</string>
+    <string name="troisiemeRessources">200</string>
     <string name="argentPremiereRessources">50</string>
+    <string name="argenteDeuxiemeRessources">90</string>
+    <string name="argenteTroisiemeRessources">180</string>
 </resources>
